--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LonelyLessAustralia Decision Aid Tool</title>
   <link rel="stylesheet" href="styles.css" />
   <!-- Font Awesome for icons -->
@@ -16,32 +16,32 @@
   <div class="container">
     <header>
       <h1>LonelyLessAustralia Decision Aid Tool</h1>
-      <p>This tool helps you evaluate programme configurations for reducing loneliness. </p>
+      <p>This tool helps you evaluate programme configurations for reducing loneliness. It explains how costs and benefits are calculated so that even lay users can understand the trade‐offs.</p>
     </header>
 
     <nav class="tabs" role="tablist">
-      <button class="tablink active" role="tab" aria-selected="true" aria-controls="introTab" onclick="openTab('introTab', this)">
+      <button class="tablink active" data-tab="introTab" aria-selected="true">
         <i class="fa-solid fa-info-circle"></i><span> Introduction</span>
       </button>
-      <button class="tablink" role="tab" aria-selected="false" aria-controls="instructionsTab" onclick="openTab('instructionsTab', this)">
+      <button class="tablink" data-tab="instructionsTab" aria-selected="false">
         <i class="fa-solid fa-circle-question"></i><span> Instructions</span>
       </button>
-      <button class="tablink" role="tab" aria-selected="false" aria-controls="attributesTab" onclick="openTab('attributesTab', this)">
+      <button class="tablink" data-tab="attributesTab" aria-selected="false">
         <i class="fa-solid fa-list"></i><span> Attributes</span>
       </button>
-      <button class="tablink" role="tab" aria-selected="false" aria-controls="inputsTab" onclick="openTab('inputsTab', this)">
+      <button class="tablink" data-tab="inputsTab" aria-selected="false">
         <i class="fa-solid fa-sliders"></i><span> Inputs</span>
       </button>
-      <button class="tablink" role="tab" aria-selected="false" aria-controls="wtpTab" onclick="openTab('wtpTab', this)">
+      <button class="tablink" data-tab="wtpTab" aria-selected="false">
         <i class="fa-solid fa-chart-bar"></i><span> WTP Results</span>
       </button>
-      <button class="tablink" role="tab" aria-selected="false" aria-controls="probTab" onclick="openTab('probTab', this)">
-        <i class="fa-solid fa-chart-line"></i><span> Predicted Programme Uptake</span>
+      <button class="tablink" data-tab="probTab" aria-selected="false">
+        <i class="fa-solid fa-chart-pie"></i><span> Predicted Programme Uptake</span>
       </button>
-      <button class="tablink" role="tab" aria-selected="false" aria-controls="costsTab" onclick="openTab('costsTab', this)">
+      <button class="tablink" data-tab="costsTab" aria-selected="false">
         <i class="fa-solid fa-calculator"></i><span> Costs &amp; Benefits</span>
       </button>
-      <button class="tablink" role="tab" aria-selected="false" aria-controls="scenariosTab" onclick="openTab('scenariosTab', this)">
+      <button class="tablink" data-tab="scenariosTab" aria-selected="false">
         <i class="fa-solid fa-folder-open"></i><span> Scenarios</span>
       </button>
     </nav>
@@ -54,12 +54,12 @@
         </p>
         <ul>
           <li><strong>Instructions</strong> – Step-by-step guidance.</li>
-          <li><strong>Attributes</strong> – Detailed explanation of programme features (hover over info icons for extra details).</li>
-          <li><strong>Inputs</strong> – Configure your scenario parameters using user-friendly level cards.</li>
+          <li><strong>Attributes</strong> – Detailed explanation of programme features (hover over info icons for extra details, including reference levels except for cost).</li>
+          <li><strong>Inputs</strong> – Configure your scenario parameters using visually appealing level cards.</li>
           <li><strong>WTP Results</strong> – View charts showing willingness-to-pay estimates.</li>
-          <li><strong>Predicted Programme Uptake</strong> – See the predicted uptake percentage and suggestions for improvements.</li>
-          <li><strong>Costs &amp; Benefits</strong> – Analyse detailed cost components and QALY-based benefits with interactive sliders, pop-up info boxes and educational summaries.</li>
-          <li><strong>Scenarios</strong> – Save, compare and export various configurations.</li>
+          <li><strong>Predicted Programme Uptake</strong> – See the predicted uptake percentage with dynamic recommendations.</li>
+          <li><strong>Costs &amp; Benefits</strong> – Analyse cost components and QALY-based benefits with interactive sliders, info boxes, and educational summaries.</li>
+          <li><strong>Scenarios</strong> – Save, compare, and export various configurations.</li>
         </ul>
       </div>
     </section>
@@ -69,13 +69,13 @@
       <div class="calculation-info">
         <h4>How to Use This Tool</h4>
         <ol>
-          <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over the info icons to view extra details.</li>
-          <li style="margin-left: 20px;">Configure your scenario in the <strong>Inputs</strong> tab using the level cards (hover over the info buttons for instructions).</li>
-          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to update charts and the cost-benefit analysis.</li>
-          <li style="margin-left: 20px;">Examine the <strong>WTP Results</strong> tab to see the monetary value respondents assign to each attribute.</li>
-          <li style="margin-left: 20px;">Check the <strong>Predicted Programme Uptake</strong> tab to view the predicted uptake percentage and suggestions for adjustments.</li>
-          <li style="margin-left: 20px;">Review the <strong>Costs &amp; Benefits</strong> tab for an interactive cost breakdown with educational summaries explaining key modelling assumptions.</li>
-          <li style="margin-left: 20px;">Save and compare different scenarios in the <strong>Scenarios</strong> tab or export the results to PDF.</li>
+          <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over the info icons for details and reference levels (except for cost per session).</li>
+          <li style="margin-left: 20px;">Configure your scenario in the <strong>Inputs</strong> tab using the level cards. All features (except method) are required; if no method is selected, in-person is assumed.</li>
+          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to update the results. A summary will appear right in the Inputs tab.</li>
+          <li style="margin-left: 20px;">Examine the <strong>WTP Results</strong> tab for monetary values assigned to each attribute.</li>
+          <li style="margin-left: 20px;">Check the <strong>Predicted Programme Uptake</strong> tab for the uptake percentage and dynamic recommendations.</li>
+          <li style="margin-left: 20px;">Review the <strong>Costs &amp; Benefits</strong> tab for a detailed breakdown and chart.</li>
+          <li style="margin-left: 20px;">Save and compare scenarios in the <strong>Scenarios</strong> tab or export the results to PDF.</li>
         </ol>
       </div>
     </section>
@@ -84,7 +84,7 @@
     <section id="attributesTab" class="tabcontent" tabindex="0">
       <h2>Key Attributes</h2>
       <div class="attributes-list">
-        <!-- Attribute Card 1: Cost per Session -->
+        <!-- Attribute Card 1: Cost per Session (no reference) -->
         <div class="attribute-card" tabindex="0">
           <div class="attribute-icon">
             <svg width="24" height="24" fill="#2980b9" xmlns="http://www.w3.org/2000/svg">
@@ -92,12 +92,12 @@
               <path d="M10 15l-3-3 1.4-1.4 1.6 1.6L15 7l1.4 1.4-6.4 6.4z" fill="#2980b9"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              The out-of-pocket fee (in AUD) participants must pay each time they attend.
+              The out-of-pocket fee (in AUD) participants pay per session.
             </div>
           </div>
           <div class="attribute-content">
             <h4>Cost per session</h4>
-            <p>The out-of-pocket fee (AUD) participants must pay each time they attend.</p>
+            <p>The fee paid by participants per session.</p>
           </div>
         </div>
         <!-- Attribute Card 2: Accessibility -->
@@ -108,12 +108,13 @@
               <path d="M12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16z" fill="#e67e22"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              Determines if the programme is offered locally (up to 12 km) or in a wider community (50+ km), affecting mobility, transport costs, and convenience.
+              <strong>Reference: At Home</strong><br/>
+              Offered locally (up to 12 km) versus in a wider community (50+ km).
             </div>
           </div>
           <div class="attribute-content">
             <h4>Accessibility</h4>
-            <p>Whether the programme is local or in a wider community.</p>
+            <p>Local or wider community delivery.</p>
           </div>
         </div>
         <!-- Attribute Card 3: Frequency of Interaction -->
@@ -124,7 +125,8 @@
               <path d="M12 6v6l4 2" stroke="#27ae60" stroke-width="2" fill="none"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              Weekly sessions promote more frequent social engagement compared to monthly sessions.
+              <strong>Reference: Daily</strong><br/>
+              Weekly sessions encourage more regular engagement than monthly.
             </div>
           </div>
           <div class="attribute-content">
@@ -140,12 +142,13 @@
               <path d="M8 12h8M12 8v8" stroke="#8e44ad" stroke-width="2" fill="none"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              Virtual sessions are delivered online; hybrid sessions combine in-person and virtual elements.
+              <strong>Reference: In-person</strong><br/>
+              Virtual sessions are online; hybrid sessions blend both.
             </div>
           </div>
           <div class="attribute-content">
             <h4>Method of Interaction</h4>
-            <p>Virtual or hybrid (in-person &amp; virtual).</p>
+            <p>Virtual or hybrid.</p>
           </div>
         </div>
         <!-- Attribute Card 5: Duration of Each Interaction -->
@@ -156,7 +159,8 @@
               <path d="M12 6v6l4 2" stroke="#3498db" stroke-width="2" fill="none"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              2-hour or 4-hour sessions affect both the depth of interaction and scheduling flexibility.
+              <strong>Reference: 30-minute</strong><br/>
+              Longer sessions (2 or 4 hours) affect depth and scheduling.
             </div>
           </div>
           <div class="attribute-content">
@@ -172,12 +176,13 @@
               <path d="M8 12l2-2 4 4 6-6" stroke="#e74c3c" stroke-width="2" fill="none"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              Options include community engagement, psychological counselling, or VR-based sessions.
+              <strong>Reference: Peer Support</strong><br/>
+              Options include community engagement, counselling, or VR-based sessions.
             </div>
           </div>
           <div class="attribute-content">
             <h4>Type of Support Programme</h4>
-            <p>Community engagement, psychological counselling, or VR-based sessions.</p>
+            <p>Community engagement, counselling, or VR-based sessions.</p>
           </div>
         </div>
       </div>
@@ -208,7 +213,7 @@
                 </label>
               </div>
             </div>
-            <!-- Method Card -->
+            <!-- Method Card (Optional; defaults to in-person if unselected) -->
             <div class="input-level-card">
               <h3>Method <span class="reference">(Reference: In-person)</span></h3>
               <div class="options">
@@ -275,7 +280,7 @@
                 <input type="range" id="costSlider" min="0" max="100" step="1" value="50" oninput="updateCostDisplay(this.value)" />
               </div>
             </div>
-            <!-- State & Cost-of-Living Adjustment Card -->
+            <!-- Cost-of-Living Adjustment Card -->
             <div class="input-level-card">
               <h3>Cost-of-Living Adjustment</h3>
               <div class="options">
@@ -319,6 +324,8 @@
             <button type="button" onclick="openSingleScenario()">Calculate &amp; View Results</button>
           </div>
         </form>
+        <!-- Results Section within Inputs Tab -->
+        <div id="inputResults" class="calculation-info" style="display: none;"></div>
       </div>
     </section>
 
@@ -327,10 +334,10 @@
       <div class="calculation-info">
         <h4>Willingness to Pay (WTP) Results</h4>
         <p>
-          The willingness-to-pay (WTP) for each programme attribute is calculated by taking the ratio of the attribute’s coefficient to the negative of the cost coefficient. This metric quantifies the monetary value respondents place on each programme attribute, holding other factors constant.
+          The willingness-to-pay (WTP) for each programme attribute is calculated by taking the ratio of the attribute’s coefficient to the negative of the cost coefficient. This quantifies the monetary value respondents assign to each feature.
         </p>
         <p>
-          For example, among the programme types, community engagement is the most highly valued, with a WTP of A$14.47 (SE=3.31, p &lt; 0.001). This shows older adults are willing to pay an additional A$14.47 for community-based programmes, compared to the reference peer support scenario.
+          For example, community engagement is valued at A$14.47 (SE=3.31, p &lt; 0.001), indicating a premium over the reference (peer support).
         </p>
         <div class="buttons-row">
           <button onclick="renderWTPChart()">Show WTP Charts</button>
@@ -348,16 +355,14 @@
     <section id="probTab" class="tabcontent" tabindex="0">
       <div class="calculation-info">
         <h4>Predicted Programme Uptake</h4>
-        <p>
-          Click “Show Probability Plot” to compute a new bar chart based on your Inputs. The chart displays the predicted uptake percentage. Depending on whether the uptake is below 30%, between 30–70%, or above 70%, the tool provides intuitive suggestions for adjusting programme cost, enhancing accessibility, or increasing interaction frequency.
-        </p>
+        <p>Click “Show Probability Plot” to compute the predicted programme uptake percentage.</p>
         <div class="buttons-row">
           <button onclick="renderProbChart()">Show Probability Plot</button>
         </div>
         <div class="chart-grid">
-          <div class="chart-box">
-            <h3>Uptake Probability</h3>
-            <canvas id="probChartMain"></canvas>
+          <div class="chart-box" style="position: relative; height:300px;">
+            <h3>Predicted Uptake</h3>
+            <canvas id="uptakeChart"></canvas>
           </div>
         </div>
       </div>
@@ -376,12 +381,12 @@
           </select>
         </div>
         <div id="costsBenefitsResults">
-          <!-- Combined Cost-Benefit Chart and summary will be rendered here -->
+          <!-- Summary and chart will render here -->
         </div>
         <div class="modelling-assumptions">
           <h3><i class="fa-solid fa-lightbulb"></i> Modelling Assumptions</h3>
           <p>
-            Our analysis uses interactive cost sliders, pop-up info boxes and brief educational summaries to explain how costs and benefits are calculated.
+            Our analysis uses interactive cost sliders, pop-up info boxes, and educational summaries to explain how costs and benefits are calculated.
             <br/><strong>Reference:</strong> Engel, L., Lee, Y. Y., Le, L. K. D., Lal, A., &amp; Mihalopoulos, C. (2021). Reducing loneliness to prevent depression in older adults in Australia: A modelled cost-effectiveness analysis. <em>Mental Health and Prevention, 24</em>. <a href="https://doi.org/10.1016/j.mhp.2021.200212" target="_blank">https://doi.org/10.1016/j.mhp.2021.200212</a>
           </p>
         </div>
@@ -389,7 +394,7 @@
           <button class="buttons-row" onclick="toggleCostBreakdown()">Cost Breakdown</button>
           <button class="buttons-row" onclick="toggleBenefitsAnalysis()">Benefits Analysis</button>
         </div>
-        <div id="detailedCostBreakdown" class="cost-cards" style="display:none;">
+        <div id="detailedCostBreakdown" class="cost-cards" style="display: none;">
           <div class="cost-card">
             <h4><i class="fa-solid fa-newspaper"></i> Advertisements in Local Press</h4>
             <p><strong>Value:</strong> A$2978.80</p>
@@ -468,7 +473,7 @@
             <p><strong>Total Cost:</strong> A$2500.00</p>
           </div>
         </div>
-        <div id="detailedBenefitsAnalysis" class="cost-cards" style="display:none;">
+        <div id="detailedBenefitsAnalysis" class="cost-cards" style="display: none;">
           <div class="cost-card">
             <h4><i class="fa-solid fa-hand-holding-dollar"></i> QALY Benefits</h4>
             <p>Calculated as: (Participants × QALY per Participant) × A$50,000.</p>
@@ -485,12 +490,6 @@
         <div class="buttons-row">
           <button onclick="saveScenario()">Save Current Scenario</button>
           <button onclick="openComparison()">Compare &amp; Export to PDF</button>
-        </div>
-        <div class="filter-options">
-          <label for="filterSelect">Filter Scenarios:</label>
-          <select id="filterSelect">
-            <option value="all">All</option>
-          </select>
         </div>
         <div class="table-container">
           <table id="scenarioTable">
