--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <ol>
           <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over the info icons for details and reference levels (except for cost per session).</li>
           <li style="margin-left: 20px;">Configure your scenario in the <strong>Inputs</strong> tab using the level cards. All features (except method) are required; if no method is selected, in-person is assumed.</li>
-          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to update the results. A summary will appear right in the Inputs tab.</li>
+          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to update the results. A summary will appear in the Inputs tab.</li>
           <li style="margin-left: 20px;">Examine the <strong>WTP Results</strong> tab for monetary values assigned to each attribute.</li>
           <li style="margin-left: 20px;">Check the <strong>Predicted Programme Uptake</strong> tab for the uptake percentage and dynamic recommendations.</li>
           <li style="margin-left: 20px;">Review the <strong>Costs &amp; Benefits</strong> tab for a detailed breakdown and chart.</li>
