--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <header>
       <h1>LonelyLessAustralia Decision Aid Tool</h1>
-      <p>This tool helps you evaluate programme configurations for reducing loneliness among older adults in Australia. </p>
+      <p>This tool helps you evaluate programme configurations for reducing loneliness. It explains how costs and benefits are calculated so that even lay users can understand the trade‐offs.</p>
     </header>
 
     <nav class="tabs" role="tablist">
@@ -42,7 +42,7 @@
         <i class="fa-solid fa-calculator"></i><span> Costs &amp; Benefits</span>
       </button>
       <button class="tablink" data-tab="scenariosTab" aria-selected="false">
-        <i class="fa-solid fa-folder-open"></i><span> Scenarios</span>
+        <i class="fa-solid fa-folder-open"></i><span> Saved Scenarios</span>
       </button>
     </nav>
 
@@ -50,7 +50,7 @@
     <section id="introTab" class="tabcontent" tabindex="0" style="display: block;">
       <div class="intro-box">
         <p>
-          Loneliness affects over five million Australians, particularly older adults, causing significant health and economic challenges. This tool uses discrete choice experiment estimates to predict programme uptake probabilities, enabling personalised services based on the features older adults value most.
+          Loneliness affects over five million Australians, particularly older adults, causing significant health and economic challenges. This tool uses discrete choice experiment estimates to predict programme uptake probabilities, enabling personalised services based on the attributes older adults value most.
         </p>
         <ul>
           <li><strong>Instructions</strong> – Step-by-step guidance.</li>
@@ -59,7 +59,7 @@
           <li><strong>WTP Results</strong> – View charts showing willingness-to-pay estimates.</li>
           <li><strong>Predicted Programme Uptake</strong> – See the predicted uptake percentage with dynamic recommendations.</li>
           <li><strong>Costs &amp; Benefits</strong> – Analyse cost components and QALY-based benefits with interactive sliders, info boxes, and educational summaries.</li>
-          <li><strong>Scenarios</strong> – Save, compare, and export various configurations.</li>
+          <li><strong>Saved Scenarios</strong> – Compare and export your saved configurations.</li>
         </ul>
       </div>
     </section>
@@ -71,11 +71,11 @@
         <ol>
           <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over the info icons for details and reference levels (except for cost per session).</li>
           <li style="margin-left: 20px;">Configure your scenario in the <strong>Inputs</strong> tab using the level cards. All features (except method) are required; if no method is selected, in-person is assumed.</li>
-          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to update the results. A summary will appear in the Inputs tab.</li>
+          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to immediately see your results in a popup.</li>
           <li style="margin-left: 20px;">Examine the <strong>WTP Results</strong> tab for monetary values assigned to each attribute.</li>
-          <li style="margin-left: 20px;">Check the <strong>Predicted Programme Uptake</strong> tab for the uptake percentage and dynamic recommendations.</li>
+          <li style="margin-left: 20px;">Check the <strong>Predicted Programme Uptake</strong> tab for the uptake percentage and dynamic recommendations (which also appear in the popup when calculated).</li>
           <li style="margin-left: 20px;">Review the <strong>Costs &amp; Benefits</strong> tab for a detailed breakdown and chart.</li>
-          <li style="margin-left: 20px;">Save and compare scenarios in the <strong>Scenarios</strong> tab or export the results to PDF.</li>
+          <li style="margin-left: 20px;">Save and compare scenarios in the <strong>Saved Scenarios</strong> tab or export the results to PDF.</li>
         </ol>
       </div>
     </section>
@@ -324,20 +324,25 @@
             <button type="button" onclick="openSingleScenario()">Calculate &amp; View Results</button>
           </div>
         </form>
-        <!-- Results Section within Inputs Tab -->
-        <div id="inputResults" class="calculation-info" style="display: none;"></div>
+        <!-- Results Modal for Inputs Tab -->
+        <div id="resultModal" class="modal">
+          <div class="modal-content">
+            <span class="close-button" onclick="closeModal()">&times;</span>
+            <div id="modalResults"></div>
+          </div>
+        </div>
       </div>
     </section>
 
     <!-- WTP Results Tab -->
     <section id="wtpTab" class="tabcontent" tabindex="0">
       <div class="calculation-info">
-        <h4>Willingness to Pay (WTP) Results</h4>
+        <h4>Willingness-to-Pay (WTP) Results</h4>
         <p>
-          The willingness-to-pay (WTP) for each programme attribute is calculated by taking the ratio of the attribute’s coefficient to the negative of the cost coefficient. This quantifies the monetary value respondents assign to each feature.
+          The willingness-to-pay (WTP) for each programme attribute is calculated by taking the ratio of the attribute’s coefficient to the negative of the cost coefficient. This metric quantifies the monetary value respondents place on each programme attribute, holding other factors constant.
         </p>
         <p>
-          For example, community engagement is valued at A$14.47 (SE=3.31, p &lt; 0.001), indicating a premium over the reference (peer support).
+          For example, among the programme types, community engagement is the most highly valued, with a WTP of A$14.47 (SE=3.31, p &lt; 0.001). This shows older adults are willing to pay an additional A$14.47 for community-based programmes, compared to the reference peer support scenario.
         </p>
         <div class="buttons-row">
           <button onclick="renderWTPChart()">Show WTP Charts</button>
@@ -361,7 +366,7 @@
         </div>
         <div class="chart-grid">
           <div class="chart-box" style="position: relative; height:300px;">
-            <h3>Predicted Uptake</h3>
+            <h3>Uptake vs. Non‑uptake</h3>
             <canvas id="uptakeChart"></canvas>
           </div>
         </div>
@@ -486,7 +491,7 @@
     <section id="scenariosTab" class="tabcontent" tabindex="0">
       <div class="calculation-info">
         <h4>Saved Scenarios</h4>
-        <p>Below are the scenarios you have saved. Each row shows the input values along with the computed predicted uptake and net benefit.</p>
+        <p>Below are your saved scenarios. Each row displays the input values along with the computed predicted uptake and net benefit.</p>
         <div class="buttons-row">
           <button onclick="saveScenario()">Save Current Scenario</button>
           <button onclick="openComparison()">Compare &amp; Export to PDF</button>
@@ -524,6 +529,15 @@
       <p>&copy; 2025 LonelyLessAustralia. All Rights Reserved.<br />Mesfin Genie, Newcastle Business School, The University of Newcastle, Australia</p>
     </footer>
   </div>
+
+  <!-- Result Modal -->
+  <div id="resultModal" class="modal">
+    <div class="modal-content">
+      <span class="close-button" onclick="closeModal()">&times;</span>
+      <div id="modalResults"></div>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
