--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div id="mainContent">
     <header>
       <h1>LonelyLessAustralia Decision Aid Tool</h1>
-      <p>This tool helps you evaluate programme configurations for reducing loneliness. It explains how costs and benefits are calculated so that even lay users can understand the trade‐offs.</p>
+      <p>This tool helps you evaluate programme configurations for reducing loneliness among older adults (65 years and above). </p>
     </header>
 
     <!-- Navigation Tabs (desktop) -->
@@ -94,10 +94,10 @@
         </p>
         <ul>
           <li><strong>Instructions</strong> – Step-by-step guidance.</li>
-          <li><strong>Attributes</strong> – Detailed explanation of programme features (hover over info icons for extra details, including reference levels except for cost).</li>
-          <li><strong>Inputs</strong> – Configure your scenario parameters using visually appealing level cards.</li>
+          <li><strong>Attributes</strong> – Detailed explanation of programme features (hover over info icons for extra details).</li>
+          <li><strong>Inputs</strong> – Configure your scenario parameters using level cards.</li>
           <li><strong>WTP Results</strong> – View charts showing willingness-to-pay estimates.</li>
-          <li><strong>Predicted Uptake</strong> – See the predicted uptake percentage with dynamic recommendations.</li>
+          <li><strong>Predicted Uptake</strong> – See the predicted uptake percentage with recommendations.</li>
           <li><strong>Costs &amp; Benefits</strong> – Analyse cost components and QALY-based benefits with interactive sliders and educational summaries.</li>
           <li><strong>Saved Scenarios</strong> – Compare and export your saved configurations.</li>
         </ul>
